# chembl_variants

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
analysis/: annotation_analysis.ipynb  annotation_analysis_automatic.ipynb  annotation_analysis_semimanual.ipynb  explore_analysis_bioactivity_distribution.py  explore_cluster_values.ipynb  explore_clustermap_values.ipynb  main.py  modelling_figure.ipynb  modelling_results.ipynb  modelling_results_summary.ipynb  modelling_scatter_plots.ipynb  mutant_analysis_accession.ipynb  mutant_analysis_bioactivity_clustermaps.ipynb  mutant_analysis_bioactivity_distributions.ipynb  mutant_analysis_family.ipynb  mutant_analysis_type_organism.ipynb  utils.py
data/: BLOSUM62.txt  Epstein_matrix.csv  Grantham_matrix.csv  chembl31_rejected_assays_round1.csv  chembl31_wrong_annotated_assays_round1.csv  known_regex_exceptions.json
docs/source/: conf.py  index.rst  modules.rst  mutants-in-pcm.rst
src/mutants-in-pcm/: __init__.py  annotation.ipynb  annotation.py  annotation_round2.ipynb  data_annotation_analysis.ipynb  data_annotation_example.ipynb  data_path.py  descriptors.py  modeling_mutant_analysis.py  modeling_mutants_common_sets.py  modelling.py  modelling_figure.ipynb  mutant_analysis.py  mutant_analysis_accession.ipynb  mutant_analysis_accession.py  mutant_analysis_clustermaps.ipynb  mutant_analysis_clustermaps.py  mutant_analysis_common_subsets.py  mutant_analysis_compounds.py  mutant_analysis_family.ipynb  mutant_analysis_family.py  mutant_analysis_type.py  (+5 more)
tests/: __init__.py  applicability_domains.py  constants.py  test_1.py
(+19 files in other folders)
