[metadata]
name = mutants-in-pcm
version = 0.0.1
description = A package to investigate proteochemometrics modelling of protein mutants' activity
long_description = file: README.md
long_description_content_type = text/markdown

url = https://gitlab.services.universiteitleiden.nl/cdd/mutants-in-pcm

author = Marina Gorostiola González & Olivier J. M. Béquignon
author_email = m.gorostiola.gonzalez@lacdr.leidenuniv.nl & o.j.m.bequignon@lacdr.leidenuniv.nl
maintainer = Marina Gorostiola González & Olivier J. M. Béquignon
maintainer_email = m.gorostiola.gonzalez@lacdr.leidenuniv.nl & olivier.bequignon.maintainer@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

keywords =
    mutants
    proteochemometrics
    descriptors

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    pandas
    chembl_donwloader
    papyrus_scripts @ https://github.com/OlivierBeq/papyrus-scripts/tarball/master
    prodec
    mordred @ https://github.com/OlivierBeq/mordred/tarball/master

[options.packages.find]
where = src

[options.package_data]
prodec = *.json

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest